# htr_seg_select

./: .cursorrules  .gitignore  .last_image_dir  DOCKER_DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
htr_seg_select/htr_seg_select/: production.py  settings.py  urls.py  wsgi.py
htr_seg_select/selector/: admin.py  apps.py  models.py  segmentation.py  urls.py  views.py
htr_seg_select/selector/migrations/: 0002_document_file.py  0005_linesegment_transcribed_linesegment_transcription_and_more.py  0006_alter_linesegment_transcription.py  0007_alter_document_options_alter_linesegment_options_and_more.py  0008_linesegment_last_transcribed_by_and_more.py  0009_notebook_linesegment_page_document_notebook.py  0011_remove_document_name.py
htr_seg_select/selector/static/: admin-vazirmatn.css
htr_seg_select/selector/templates/admin/selector/linesegment/: change_form.html
htr_seg_select/selector/templates/selector/: pdf2image.html  segment_pick.html
htr_seg_select/selector/utils/: symbol_conversion.py
htr_seg_select/templates/admin/: base_site.html
src/: manage.py
src/htr_seg_select/: asgi.py  base.py
src/selector/: admin.py  models.py  urls.py  views.py
src/selector/migrations/: 0001_initial.py  0003_alter_document_name.py  0004_linesegment.py  0010_populate_notebooks_and_pages.py
src/selector/templates/admin/selector/linesegment/: change_form.html
src/selector/templates/selector/: segment_compare.html  segment_list.html
src/selector/utils/: symbol_conversion.py
