[project]
name = "htr-seg-select"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.10",
    "kraken[pdf]>=6.0.3",
    "opencv-contrib-python>=4.13.0.90",
    "opencv-python>=4.13.0.90",
    "psycopg[binary]>=3.3.2",
    "pymupdf>=1.26.7",
    "torch==2.9.0",
    "torchvision==0.24.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
